fix: add spacing in operation p

--- a/style.css
+++ b/style.css
@@ -404,6 +404,9 @@ header{
     max-width: 40%;
 }
 
+.operation .col-33 p{
+   max-width: 80%;
+}
 
 
 
